[gd_scene load_steps=39 format=3 uid="uid://ckng63detpg81"]

[ext_resource type="Texture2D" uid="uid://dhv21cnwh8y4b" path="res://Assets/Character base.png" id="1_e7d54"]
[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_gqhxu"]
[ext_resource type="Shader" path="res://Entity/Player/glitch.gdshader" id="2_22s6a"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/States.gd" id="3_pqwyk"]
[ext_resource type="PackedScene" uid="uid://cu0qx0scepfq7" path="res://Entity/DyamicCamera2D/DynamicCamera2D.tscn" id="3_s37m3"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/LockedState.gd" id="4_jim0x"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/IdleState.gd" id="5_ge4yc"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/RunState.gd" id="5_knb1c"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpState.gd" id="6_kf4y8"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpPeakState.gd" id="7_clwxn"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/FallState.gd" id="8_6y5yk"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallJumpState.gd" id="9_2sppr"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallGrabState.gd" id="11_2klq3"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallClimbState.gd" id="12_bexp8"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallSlideState.gd" id="13_uqlse"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/DashState.gd" id="14_2n0fv"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/LedgeGrabState.gd" id="15_je7ob"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/LedgeClimbState.gd" id="16_ft441"]
[ext_resource type="Texture2D" uid="uid://bgyu4eb7id0fy" path="res://Assets/spotlight.jpg" id="19_ae25c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf4u2"]
shader = ExtResource("2_22s6a")
shader_parameter/glitch_intensity = 3.0
shader_parameter/glitch_frequency = 1.5

[sub_resource type="Animation" id="Animation_7ahmx"]
resource_name = "Dash"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [88]
}

[sub_resource type="Animation" id="Animation_5ksb1"]
resource_name = "Fall"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_vog66"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_3p2k2"]
resource_name = "Jump"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_jvxsa"]
resource_name = "AnimationClimb"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107, 107]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 39.3966, 1e-05, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -13), Vector2(0, -13), Vector2(0, -13), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h5n4e"]
resource_name = "LedgeGrab"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [96, 97]
}

[sub_resource type="Animation" id="Animation_ypk8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gffua"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_0lcow"]
resource_name = "WallClimb"
length = 0.8
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75]
}

[sub_resource type="Animation" id="Animation_vowbq"]
resource_name = "WallGrab"
length = 0.9
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [64, 65]
}

[sub_resource type="Animation" id="Animation_hjl6o"]
resource_name = "WallJump"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_bptbt"]
resource_name = "WallKick"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [56, 57, 58]
}

[sub_resource type="Animation" id="Animation_0e8rv"]
resource_name = "WallSlide"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w2do"]
_data = {
"Dash": SubResource("Animation_7ahmx"),
"Fall": SubResource("Animation_5ksb1"),
"Idle": SubResource("Animation_vog66"),
"Jump": SubResource("Animation_3p2k2"),
"LedgeClimb": SubResource("Animation_jvxsa"),
"LedgeGrab": SubResource("Animation_h5n4e"),
"RESET": SubResource("Animation_ypk8g"),
"Run": SubResource("Animation_gffua"),
"WallClimb": SubResource("Animation_0lcow"),
"WallGrab": SubResource("Animation_vowbq"),
"WallJump": SubResource("Animation_hjl6o"),
"WallKick": SubResource("Animation_bptbt"),
"WallSlide": SubResource("Animation_0e8rv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7phbn"]
size = Vector2(8, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_jct8j"]
atlas = ExtResource("1_e7d54")
region = Rect2(0, 352, 32, 32)

[sub_resource type="Gradient" id="Gradient_mk772"]
colors = PackedColorArray(1, 1, 1, 0.709804, 1, 0, 0, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcqby"]
radius = 4.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gqhxu")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pf4u2")
texture = ExtResource("1_e7d54")
hframes = 8
vframes = 14

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7w2do")
}

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_7phbn")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_pqwyk")

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource("4_jim0x")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_ge4yc")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_knb1c")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("6_kf4y8")

[node name="JumpPeak" type="Node" parent="StateMachine"]
script = ExtResource("7_clwxn")

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("9_2sppr")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("8_6y5yk")

[node name="WallGrab" type="Node" parent="StateMachine"]
script = ExtResource("11_2klq3")

[node name="WallClimb" type="Node" parent="StateMachine" groups=["Player"]]
script = ExtResource("12_bexp8")

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource("13_uqlse")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("14_2n0fv")

[node name="LedgeGrab" type="Node" parent="StateMachine"]
script = ExtResource("15_je7ob")

[node name="LedgeClimb" type="Node" parent="StateMachine"]
script = ExtResource("16_ft441")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTime" type="Timer" parent="Timers"]

[node name="JumpBuffer" type="Timer" parent="Timers"]

[node name="DashTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DashBuffer" type="Timer" parent="Timers"]
one_shot = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallJump" type="Node2D" parent="Raycasts"]

[node name="BottomLeft" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(-3.01, 12)
target_position = Vector2(-4, 0)
collision_mask = 3

[node name="BottomRight" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(3.01, 12)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="WallClimb" type="Node2D" parent="Raycasts"]

[node name="TopLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, -3)
target_position = Vector2(-4, 0)
collision_mask = 3

[node name="TopRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, -3)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="UpperRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, -4)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="UpperLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, -4)
target_position = Vector2(-4, 0)
collision_mask = 3

[node name="LowerRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, 13)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="LowerLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, 13)
target_position = Vector2(-4, 0)
collision_mask = 3

[node name="LedgeGrab" type="Node2D" parent="Raycasts"]

[node name="LedgeRightLower" type="RayCast2D" parent="Raycasts/LedgeGrab"]
position = Vector2(1, -1)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="LedgeRightUpper" type="RayCast2D" parent="Raycasts/LedgeGrab"]
position = Vector2(1, -6)
target_position = Vector2(12, 0)
collision_mask = 3

[node name="LedgeLeftLower" type="RayCast2D" parent="Raycasts/LedgeGrab"]
position = Vector2(-1, -1)
target_position = Vector2(-4, 0)
collision_mask = 3

[node name="LedgeLeftUpper" type="RayCast2D" parent="Raycasts/LedgeGrab"]
position = Vector2(-1, -6)
target_position = Vector2(-12, 0)
collision_mask = 3

[node name="GraphcisEffects" type="Node2D" parent="."]

[node name="Dash" type="Node2D" parent="GraphcisEffects"]

[node name="DashTrail" type="CPUParticles2D" parent="GraphcisEffects/Dash"]
emitting = false
amount = 4
one_shot = true
speed_scale = 3.0
texture = SubResource("AtlasTexture_jct8j")
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_mk772")

[node name="DynamicCamera2d" parent="." instance=ExtResource("3_s37m3")]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("19_ae25c")
texture_scale = 0.5

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_pcqby")

[connection signal="animation_finished" from="Animator" to="StateMachine/LedgeClimb" method="_on_animator_animation_finished"]
