extends Node

@onready var Locked = $Locked
@onready var Idle = $Idle
@onready var Run = $Run
@onready var Jump = $Jump
@onready var JumpPeak = $JumpPeak
@onready var WallJump = $WallJump
@onready var Fall = $Fall
@onready var WallGrab = $WallGrab
@onready var WallClimb = $WallClimb
@onready var WallSlide = $WallSlide
@onready var Dash = $Dash
@onready var LedgeGrab = $LedgeGrab
@onready var LedgeClimb = $LedgeClimb
